# dataframe-rules-engine

./: .gitignore  README.md
.github/workflows/: scala.yml
python/: README.md  pyproject.toml
python/examples/: 01_generate_sample_purchase_transactions.py  02_apply_purchase_transaction_rules.py  PythonWrapper.py
python/src/databricks/: __init__.py
python/src/databricks/labs/validation/: rule.py  rule_set.py  structures.py
python/src/databricks/labs/validation/utils/: helpers.py
python/tests/: local_spark_singleton.py  test_rule.py  test_rule_set.py  test_structures.py
