[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/databricks"]

[project]
name = "dataframe-rules-engine"
version = "0.0.1"
description = "An extensible Rules Engine for custom Apache Spark Dataframe / Dataset validation."
authors = [
  { name="Daniel Tomes", email="daniel.tomes@databricks.com" },
  { name="Will Girten", email="will.girten@databricks.com" },
]
keywords = ["Spark", "Rules", "Validation"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/databrickslabs/dataframe-rules-engine"
Issues = "https://github.com/databrickslabs/dataframe-rules-engine/issues"
